--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.2",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "force": "^0.0.3",
     "formik": "^2.2.9",
