--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
+    "react-idle-timer": "^5.7.2",
     "react-loading-overlay-ts": "^2.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
