--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mdi-react": "^9.4.0",
+    "rc-year-calendar": "^1.0.2",
     "react": "^18.3.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
